--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="overlay"></div>
       <div class="bgi">
         
-        <img src="/public/img/furniture1.jpeg">
+        <img src="img/furniture1.jpeg">
        </div>
       <header>
           <h1>Plantera.</h1>
